# lilt

./: .cursorignore  .gitignore  .markdownlint.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
.cursor/rules/: lilt-architecture.mdc  lilt-git-agent.mdc  lilt-parser-masking.mdc  lilt-tm-lifecycle.mdc
.cursor/skills/lilt-dev/: SKILL.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: README.md  concepts.md  faq.md  getting-started.md  glossary.md
docs/architecture/: 00-glossary.md  00-product-context.md  01-platform.md  02-persistence.md  03-parser-masking.md  04-translation-engine.md  05-llm-layer.md  06-build-output.md  07-cli-application.md  08-observability.md  README.md  appendix-deferred.md
docs/development/: README.md  ai-contribution-guidelines.md  ai-domain-language-guide.md  ai-engineering-guide.md  architectural-guidelines.md  code-review-guidelines.md  contribution-workflow.md  contributor-guide.md  conventions.md  engineering-invariants.md  engineering-philosophy.md  engineering-principles.md  language-guidelines.md  overview.md  project-layout.md  pull-request-checklist.md  testing.md
docs/guides/: advanced-usage.md  configuration.md  first-translation.md  human-review.md  workflows.md
docs/reference/: cli.md  config.md
docs/runbooks/: error-reference.md  performance.md  recovery.md  troubleshooting.md
examples/quickstart/: .gitignore  README.md  main.tex
scripts/: check-config-doc-sync.sh  check-doc-sync.sh
scripts/release/: check-doc-links.sh  check-quickstart-structure.sh  check-status-consistency.py
src/lilt/: __init__.py  exceptions.py
src/lilt/cli/: __init__.py  __main__.py  main.py  ui.py
src/lilt/core/: __init__.py  build.py  review_policy.py  sync.py
src/lilt/llm/: __init__.py  base_provider.py  budget_preflight.py  context_packer.py  context_recommend.py  critique_gate.py  critique_parser.py  factory.py  openai_provider.py  output_gate.py  prompt_manager.py  provider.py  reflection_pass.py  router_provider.py  token_budget.py
src/lilt/models/: __init__.py  config.py  cost_plane.py  critique.py  segment.py  segment_policy.py  segment_transition.py  status_resolver.py  sync_result.py  translation_mode.py  translation_stage.py
src/lilt/parser/: __init__.py  analyzer.py  ast_parser.py  dependency_resolver.py  environment_stack.py  linguistic.py  mask_policy.py  placeholder_contract.py  placeholder_engine.py  roundtrip.py
src/lilt/prompts/: critique.jinja  draft.jinja  refine.jinja  system.jinja
src/lilt/services/: __init__.py  pdf_compile.py  pipeline_service.py  preconditions.py  project_service.py  tm_service.py  workspace_context.py
src/lilt/telemetry/: __init__.py  models.py  reflection_cost.py  service.py
src/lilt/tm/: __init__.py  checkpoint.py  identity_resolver.py  repository.py  segment_lookup.py  session_lease.py  source_change.py
src/lilt/utils/: __init__.py  config_loader.py  file_utils.py  namespace.py  path_utils.py  text_utils.py  token_utils.py  yaml_loader.py
src/lilt/validation/: __init__.py  accuracy_gate.py  (+1 more)
tests/: conftest.py  test_accuracy_gate.py  test_ast_parser.py  test_budget_preflight.py  test_build.py  test_build_validator.py  test_cli_analyze.py  test_cli_configure.py  test_cli_domain_edges.py  test_cli_edit.py  test_cli_import_export.py  test_cli_init.py  test_cli_search_status.py  test_cli_show.py  test_cli_sync_build.py  test_cli_telemetry.py  test_cli_tm_actions.py  test_cli_translate.py  test_cli_version.py  test_compile_pdf.py  test_config_loader.py  test_context_packer.py  test_context_recommend.py  test_context_resolver.py  test_cost_plane.py  test_critique_parser.py  test_dependency_resolver.py  test_e2e_pipeline.py  test_file_utils.py  test_identity_resolver.py  test_llm_factory.py  test_llm_provider.py  test_mask_policy.py  test_namespace_identity.py  test_openai_provider.py  test_parser_env_end.py  test_parser_literal_end_regression.py  test_parser_roundtrip.py  test_parser_segment_split.py  test_parser_xv6_listings.py  (+48 more)
tests/release/: conftest.py  test_fail_closed_build.py  test_placeholder_error_hints.py  test_session_lock_stale.py  test_session_signal_abort.py  test_tm_status_counts.py  test_tm_status_empty_ns.py  test_tm_status_requires_init.py  test_translate_idle_conflicts.py
validation/: CLAIMS.md  README.md
validation/document-types/: HUB_STATUS.md
validation/human-review/: HUB_STATUS.md
validation/metadata/: README.md
validation/recovery/: HUB_STATUS.md
validation/workflow/: HUB_STATUS.md
(+52 files in other folders)
