[project]
name = "latex-lilt"
version = "0.1.0b1"
description = "CLI for continuous LaTeX localization using LLMs and Translation Memory"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Alejandro Azario", email = "alejandroazario@gmail.com" },
]
keywords = [
    "latex",
    "localization",
    "translation-memory",
    "llm",
    "cli",
    "i18n",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Software Development :: Localization",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.12.3",
    "pydantic>=2.7.1",
    "pyyaml>=6.0.1",
    "pylatexenc>=2.10",
    "openai>=2.41.0",
    "tenacity>=9.1.4",
    "python-dotenv>=1.2.2",
    "click>=8.4.1",
    "tiktoken>=0.13.0",
    "jinja2>=3.1.3",
    "filelock>=3.13.1",
]

[project.urls]
Homepage = "https://github.com/aleaz/lilt"
Documentation = "https://github.com/aleaz/lilt/blob/main/docs/README.md"
Repository = "https://github.com/aleaz/lilt"
Issues = "https://github.com/aleaz/lilt/issues"
Changelog = "https://github.com/aleaz/lilt/blob/main/CHANGELOG.md"

[project.scripts]
lilt = "lilt.cli:run_app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lilt"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.16",
    "mypy>=1.15.0",
    "types-PyYAML>=6.0.12.20241230",
    "pytest-mock>=3.15.1",
    "pytest-cov>=7.1.0",
]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
warn_return_any = false
disallow_untyped_decorators = false
disallow_subclassing_any = false

[[tool.mypy.overrides]]
module = [
    "lilt.core.translation.*",
    "lilt.tm.checkpoint",
    "lilt.tm.segment_lookup",
    "lilt.exceptions",
    "lilt.services.*",
    "lilt.tm.*",
    "lilt.parser.*",
    "lilt.cli.*",
    "lilt.core.build",
    "lilt.core.sync",
    "lilt.utils.*",
    "lilt.models.*",
    "lilt.llm.*",
    "lilt.telemetry.*",
    "lilt.validation.*",
]
disallow_untyped_defs = true
warn_return_any = true

[tool.ruff]
exclude = [
    ".git",
    ".venv",
]

[tool.ruff.lint]
select = [
    "D",
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
    "PLC0415",
]
ignore = ["D107", "D203", "D212", "E501", "UP042"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"src/lilt/cli/**" = ["B008"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
testpaths = ["tests"]
